--- a/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW6_on_conflict_do_update_range.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW6_on_conflict_do_update_range.yaml
@@ -10,7 +10,7 @@ loaderThreads: 1
 terminals: 1
 collect_pg_stat_statements: true
 use_dist_in_explain : true
-yaml_version: v1.1
+yaml_version: v1.2
 works:
     work:
         time_secs: 180
@@ -26,11 +26,11 @@ microbenchmark:
             - CREATE UNIQUE INDEX CW6_user_accounts_1 ON CW6_accounts_1(account_id_1 ASC, user_id_1 ASC);
 
             - DROP TABLE IF EXISTS CW6_accounts_2;
-            - CREATE TABLE IF NOT EXISTS CW6_accounts_2(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1 ASC)) PARTITION BY RANGE (account_id_1);
-            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_0 PARTITION OF CW6_accounts_2 FOR VALUES FROM (1) TO (2000000);
-            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_1 PARTITION OF CW6_accounts_2 FOR VALUES FROM (2000000) TO (4000000);
-            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_2 PARTITION OF CW6_accounts_2 FOR VALUES FROM (4000000) TO (6000000);
-            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_3 PARTITION OF CW6_accounts_2 FOR VALUES FROM (6000000) TO (8000001);
+            - CREATE TABLE IF NOT EXISTS CW6_accounts_2(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1)) PARTITION BY RANGE (account_id_1);
+            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_0 PARTITION OF CW6_accounts_2 FOR VALUES FROM (1) TO (10000000);
+            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_1 PARTITION OF CW6_accounts_2 FOR VALUES FROM (10000000) TO (20000000);
+            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_2 PARTITION OF CW6_accounts_2 FOR VALUES FROM (20000000) TO (30000000);
+            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_3 PARTITION OF CW6_accounts_2 FOR VALUES FROM (30000000) TO (40000001);
         cleanup:
             - DROP TABLE IF EXISTS CW6_accounts_1;
             - DROP TABLE IF EXISTS CW6_accounts_2;
@@ -38,16 +38,16 @@ microbenchmark:
         loadRules:
             -   table: CW6_accounts_
                 count: 2
-                rows: 8000000
+                rows: 40000000
                 columns:
                     -   name: account_id_
                         count: 1
                         util: PrimaryIntGen
-                        params: [ 1, 8000000 ]
+                        params: [ 1, 40000000 ]
                     -   name: user_id_
                         count: 1
                         util: PrimaryIntGen
-                        params: [ 1, 8000000 ]
+                        params: [ 1, 40000000 ]
                     -   name: addr_
                         count: 1
                         util: PrimaryStringGen
@@ -55,7 +55,7 @@ microbenchmark:
                     -   name: bal_
                         count: 1
                         util: PrimaryFloatGen
-                        params: [ 1, 8000000, 2 ]
+                        params: [ 1, 40000000, 2 ]
 
         executeRules:
             - workload: CW6_1_2column_condition_no_conflict_on_pkey_so_single_insert
@@ -66,13 +66,13 @@ microbenchmark:
                         - query: INSERT INTO CW6_accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
+                                  params: [ 1, 15000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
+                                  params: [ 1, 15000000 ]
                               -   util: PrimaryStringGen
                                   params: [ 1, 50 ]
                               -   util: PrimaryFloatGen
-                                  params: [ 1, 4000000, 2 ]
+                                  params: [ 1, 15000000, 2 ]
 
             - workload: CW6_2_2column_condition_no_conflict_on_pkey_so_1024_insert
               run:
@@ -83,13 +83,13 @@ microbenchmark:
                           count: 1024
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
+                                  params: [ 1, 15000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
+                                  params: [ 1, 15000000 ]
                               -   util: PrimaryStringGen
                                   params: [ 1, 50 ]
                               -   util: PrimaryFloatGen
-                                  params: [ 1, 4000000, 2 ]
+                                  params: [ 1, 15000000, 2 ]
 
             - workload: CW6_3_no_conflict_on_pkey_so_single_insert_on_partitioned_tbl_by_range
               run:
@@ -99,13 +99,13 @@ microbenchmark:
                         - query: INSERT INTO CW6_accounts_2(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
+                                  params: [ 1, 15000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
+                                  params: [ 1, 15000000 ]
                               -   util: PrimaryStringGen
                                   params: [ 1, 50 ]
                               -   util: PrimaryFloatGen
-                                  params: [ 1, 4000000, 2 ]
+                                  params: [ 1, 15000000, 2 ]
 
             - workload: CW6_4_no_conflict_on_pkey_so_1024_insert_on_partitioned_tbl_by_range
               run:
@@ -116,13 +116,13 @@ microbenchmark:
                           count: 1024
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
+                                  params: [ 1, 15000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
+                                  params: [ 1, 15000000 ]
                               -   util: PrimaryStringGen
                                   params: [ 1, 50 ]
                               -   util: PrimaryFloatGen
-                                  params: [ 1, 4000000, 2 ]
+                                  params: [ 1, 15000000, 2 ]
 
 
 
@@ -134,14 +134,14 @@ microbenchmark:
                         - query: INSERT INTO CW6_accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           pattern_count: 1024
                           bindings:
+                              -   util: RandomUniqueIntGen
+                                  params: [ 1, 15000000 ]
                               -   util: RandomNumber
-                                  params: [ 4000001, 8000000 ]
-                              -   util: RandomNumber
-                                  params: [ 4000001, 8000000 ]
+                                  params: [ 4000001, 15000000 ]
                               -   util: RandomAString
                                   params: [ 50, 50 ]
                               -   util: RandomFloat
-                                  params: [ 4000001, 8000000, 2 ]
+                                  params: [ 4000001, 15000000, 2 ]
 
 
             - workload: CW6_6_no_conflict_on_pkey_so_1024_insert_on_partitioned_tbl_by_range
@@ -152,11 +152,11 @@ microbenchmark:
                         - query: INSERT INTO CW6_accounts_2(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           pattern_count: 1024
                           bindings:
+                              -   util: RandomUniqueIntGen
+                                  params: [ 1, 40000000 ]
                               -   util: RandomNumber
-                                  params: [ 4000001, 8000000 ]
-                              -   util: RandomNumber
-                                  params: [ 4000001, 8000000 ]
+                                  params: [ 4000001, 15000000 ]
                               -   util: RandomAString
                                   params: [ 50, 50 ]
                               -   util: RandomFloat
-                                  params: [ 4000001, 8000000, 2 ]
+                                  params: [ 4000001, 15000000, 2 ]
