--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG10_seqscan_increasingTabletCount.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG10_seqscan_increasingTabletCount.yaml
@@ -16,7 +16,7 @@ loaderthreads: 1
 terminals: 1
 collect_pg_stat_statements: true
 use_dist_in_explain : true
-yaml_version: v1.0
+yaml_version: v1.1
 works:
     work:
         time_secs: 120
@@ -151,18 +151,18 @@ microbenchmark:
                   -   name: noIndex_fullTable_seqScan_1M_rows_3tablets_test
                       weight: 100
                       queries:
-                          -   query: select col_bigint_id_1 from noIndex_fullTable_seqScan_1M_rows_3tablets_1 where col_bigint_id_1>1000001
+                          -   query: select col_bigint_id_1 from noIndex_fullTable_seqScan_1M_rows_3tablets_1 where col_bigint_id_1>999999
             - workload: scanG10_noIndex_fullTable_seqScan_1M_rows_6tablets
               customTags: schematype=regular,partition=hash,pkey=hash,cardinality=single,projection=nonindexed,filtercount=one,filteron=nonindexed,filtertype=comparision,queryshape=scan
               run:
                   -   name: noIndex_fullTable_seqScan_1M_rows_6tablets_test
                       weight: 100
                       queries:
-                          -   query: select col_bigint_id_1 from noIndex_fullTable_seqScan_1M_rows_6tablets_1 where col_bigint_id_1>1000001
+                          -   query: select col_bigint_id_1 from noIndex_fullTable_seqScan_1M_rows_6tablets_1 where col_bigint_id_1>999999
             - workload: scanG10_noIndex_fullTable_seqScan_1M_rows_12tablets
               customTags: schematype=regular,partition=hash,pkey=hash,cardinality=single,projection=nonindexed,filtercount=one,filteron=nonindexed,filtertype=comparision,queryshape=scan
               run:
                   -   name: noIndex_fullTable_seqScan_1M_rows_12tablets_test
                       weight: 100
                       queries:
-                          -   query: select col_bigint_id_1 from noIndex_fullTable_seqScan_1M_rows_12tablets_1 where col_bigint_id_1>1000001
+                          -   query: select col_bigint_id_1 from noIndex_fullTable_seqScan_1M_rows_12tablets_1 where col_bigint_id_1>999999
