--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,33 @@
             <version>42.3.4</version>
         </dependency>
 
+        <!-- AWS SDK for CloudWatch -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>cloudwatch</artifactId>
+            <version>2.20.162</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>auth</artifactId>
+            <version>2.20.162</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>regions</artifactId>
+            <version>2.20.162</version>
+        </dependency>
+        <!-- AWS SDK SSO support for profile-based authentication -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sso</artifactId>
+            <version>2.20.162</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>ssooidc</artifactId>
+            <version>2.20.162</version>
+        </dependency>
         <!-- JSQLParser for SQL parsing -->
         <dependency>
             <groupId>com.github.jsqlparser</groupId>
