--- a/config/yugabyte/regression_pipelines/throughput_workload/yugabyte/THRPT_G1_scan.yaml
+++ b/config/yugabyte/regression_pipelines/throughput_workload/yugabyte/THRPT_G1_scan.yaml
@@ -22,9 +22,9 @@ microbenchmark:
         setAutoCommit: true
         create:
             - DROP TABLE IF EXISTS THRPT_G1_range_table_1;
-            - CREATE TABLE THRPT_G1_table_1(id INT, region_id INT, category_id INT, subcategory_id INT, date_created DATE, status_code INT, priority_level INT, amount INT, quantity INT, PRIMARY KEY(id ASC));
-            - CREATE INDEX idx_covering_region_cat_amount ON THRPT_G1_table_1 (region_id, category_id, id) INCLUDE (amount, quantity, status_code);
-            - CREATE INDEX idx_partial_status ON THRPT_G1_table_1 (region_id, category_id, date_created, id) WHERE status_code IN (1, 2, 3) and priority_level IN (1, 2, 3);
+            - CREATE TABLE THRPT_G1_range_table_1(id INT, region_id INT, category_id INT, subcategory_id INT, date_created DATE, status_code INT, priority_level INT, amount INT, quantity INT, PRIMARY KEY(id ASC));
+            - CREATE INDEX idx_covering_region_cat_amount ON THRPT_G1_range_table_1 (region_id, category_id, id) INCLUDE (amount, quantity, status_code);
+            - CREATE INDEX idx_partial_status ON THRPT_G1_range_table_1 (region_id, category_id, date_created, id) WHERE status_code IN (1, 2, 3) and priority_level IN (1, 2, 3);
 
         cleanup:
             - DROP TABLE IF EXISTS THRPT_G1_range_table_1;
@@ -75,32 +75,32 @@ microbenchmark:
                     -   name: thrpt_wrkld_2
                         weight: 100
                         queries:
-                            -   query: SELECT * FROM THRPT_G1_table_1 WHERE region_id = 10 AND category_id = 20 AND id BETWEEN 1 AND 500000;
+                            -   query: SELECT * FROM THRPT_G1_range_table_1 WHERE region_id = 10 AND category_id = 20 AND id BETWEEN 1 AND 500000;
 
             -   workload: THRPT_G1_3_indexonly_between
                 run:
                     -   name: thrpt_wrkld_3
                         weight: 100
                         queries:
-                            -   query: SELECT id, amount, quantity, status_code FROM THRPT_G1_table_1 WHERE region_id = 15 AND category_id = 25 AND id BETWEEN 2000 AND 3000;
+                            -   query: SELECT id, amount, quantity, status_code FROM THRPT_G1_range_table_1 WHERE region_id = 15 AND category_id = 25 AND id BETWEEN 2000 AND 3000;
 
             -   workload: THRPT_G1_4_index_IN
                 run:
                     -   name: thrpt_wrkld_4
                         weight: 100
                         queries:
-                            -   query: SELECT * FROM THRPT_G1_table_1 WHERE region_id IN (1, 5, 7, 9)  AND category_id BETWEEN 1 AND 25;
+                            -   query: SELECT * FROM THRPT_G1_range_table_1 WHERE region_id IN (1, 5, 7, 9)  AND category_id BETWEEN 1 AND 25;
 
             -   workload: THRPT_G1_5_indexonly_IN
                 run:
                     -   name: thrpt_wrkld_5
                         weight: 100
                         queries:
-                            -   query: SELECT id, amount, quantity, status_code FROM THRPT_G1_table_1 WHERE region_id IN (1, 5, 7, 9) AND category_id BETWEEN 1 AND 25;
+                            -   query: SELECT id, amount, quantity, status_code FROM THRPT_G1_range_table_1 WHERE region_id IN (1, 5, 7, 9) AND category_id BETWEEN 1 AND 25;
 
             -   workload: THRPT_G1_6_partial_index
                 run:
                     -   name: thrpt_wrkld_6
                         weight: 100
                         queries:
-                            -   query: SELECT id, date_created FROM THRPT_G1_table_1 WHERE region_id IN (1, 5, 7, 9) AND status_code IN (1, 2, 3) AND priority_level IN (1, 2, 3);
+                            -   query: SELECT id, date_created FROM THRPT_G1_range_table_1 WHERE region_id IN (1, 5, 7, 9) AND status_code IN (1, 2, 3) AND priority_level IN (1, 2, 3);
