--- a/config/yugabyte/featurebench_mixed_workload_D46699.yaml
+++ b/config/yugabyte/featurebench_mixed_workload_D46699.yaml
@@ -98,7 +98,7 @@ microbenchmark:
                   - name: wrkld_6
                     weight: 100
                     queries:
-                        - query: /*+ ybbatchednl(test_table_1 test_table_2) */ SELECT test_table_1.* FROM t test_table_1 JOIN test_table_2 ON test_table_1.k0 = test_table_2.k0 AND test_table_1.k1 = test_table_2.k1
+                        - query: /*+ ybbatchednl(test_table_1 test_table_2) */ SELECT test_table_1.* FROM test_table_1 JOIN test_table_2 ON test_table_1.k0 = test_table_2.k0 AND test_table_1.k1 = test_table_2.k1
 
 
             - workload: Mixed_wl_6_join
