--- a/config/yugabyte/regression_pipelines/throughput_workload/yb_colocated/THRPT_G1_scan.yaml
+++ b/config/yugabyte/regression_pipelines/throughput_workload/yb_colocated/THRPT_G1_scan.yaml
@@ -91,7 +91,7 @@ microbenchmark:
                     -   name: thrpt_wrkld_4
                         weight: 100
                         queries:
-                            -   query: SELECT * FROM THRPT_G1_range_table_1 WHERE region_id IN (1, 5)  AND category_id IN = 1;
+                            -   query: SELECT * FROM THRPT_G1_range_table_1 WHERE region_id IN (1, 5)  AND category_id = 1;
 
             -   workload: THRPT_G1_5_indexonly_IN
                 run:
