--- a/config/yugabyte/regression_pipelines/miscellaneous/postgres/MG2_multi_statement_transaction.yaml
+++ b/config/yugabyte/regression_pipelines/miscellaneous/postgres/MG2_multi_statement_transaction.yaml
@@ -8,7 +8,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 loaderThreads: 1
 terminals: 24
 collect_pg_stat_statements: true
-yaml_version: v1.0
+yaml_version: v1.1
 works:
     work:
         time_secs: 300
@@ -118,9 +118,9 @@ microbenchmark:
                           bindings:
                               -   util: RandomNoWithDecimalPoints
                                   params: [ 1000000, 10000000, 2 ]
-                              -   util: RandomInt
+                              -   util: CyclicSeqIntGen
                                   params: [ 1, 1000000 ]
-                              -   util: RandomInt
+                              -   util: CyclicSeqIntGen
                                   params: [ 1, 1000000 ]
                         - query: SELECT bal_1 FROM accounts_1 WHERE account_id_1 = ?
                           bindings:
