--- a/config/yugabyte/regression_pipelines/miscellaneous/yb_colocated/MG2_multi_statement_transaction.yaml
+++ b/config/yugabyte/regression_pipelines/miscellaneous/yb_colocated/MG2_multi_statement_transaction.yaml
@@ -10,7 +10,7 @@ loaderthreads: 1
 terminals: 24
 collect_pg_stat_statements: true
 use_dist_in_explain : true
-yaml_version: v1.0
+yaml_version: v1.1
 works:
     work:
         time_secs: 300
@@ -120,9 +120,9 @@ microbenchmark:
                           bindings:
                               -   util: RandomNoWithDecimalPoints
                                   params: [ 1000000, 10000000, 2 ]
-                              -   util: RandomInt
+                              -   util: CyclicSeqIntGen
                                   params: [ 1, 1000000 ]
-                              -   util: RandomInt
+                              -   util: CyclicSeqIntGen
                                   params: [ 1, 1000000 ]
                         - query: SELECT bal_1 FROM accounts_1 WHERE account_id_1 = ?
                           bindings:
