--- a/config/yugabyte/regression_pipelines/throughput_workload/yugabyte/THRPT_G3_indexonly_scan_between.yaml
+++ b/config/yugabyte/regression_pipelines/throughput_workload/yugabyte/THRPT_G3_indexonly_scan_between.yaml
@@ -1,13 +1,14 @@
-type: postgres
-driver: org.postgresql.Driver
-url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+type: YUGABYTE
+driver: com.yugabyte.Driver
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-loaderThreads: 1
+loaderthreads: 1
 terminals: 1
 collect_pg_stat_statements: true
+use_dist_in_explain : true
 yaml_version: v1.0
 works:
     work:
@@ -21,7 +22,7 @@ microbenchmark:
         setAutoCommit: true
         create:
             - DROP TABLE IF EXISTS THRPT_G1_range_table_1;
-            - CREATE TABLE THRPT_G1_range_table_1(id INT, region_id INT, category_id INT, subcategory_id INT, date_created DATE, status_code INT, priority_level INT, amount INT, quantity INT, PRIMARY KEY(id));
+            - CREATE TABLE THRPT_G1_range_table_1(id INT, region_id INT, category_id INT, subcategory_id INT, date_created DATE, status_code INT, priority_level INT, amount INT, quantity INT, PRIMARY KEY(id ASC));
             - CREATE INDEX idx_covering_region_cat_amount ON THRPT_G1_range_table_1 (region_id, category_id, id) INCLUDE (amount, quantity, status_code);
             - CREATE INDEX idx_partial_status ON THRPT_G1_range_table_1 (region_id, category_id, date_created, id) WHERE status_code IN (1, 2, 3) and priority_level IN (1, 2, 3);
             - CREATE index idx_covering_region_cat_amount_asc on thrpt_g1_range_table_1 (region_id ASC, category_id ASC, id ASC) INCLUDE (amount, quantity, status_code);
@@ -63,37 +64,10 @@ microbenchmark:
                       params: [ 1, 100000 ]
 
         executeRules:
-            - workload: THRPT_G1_1_seq_scan_between
-              run:
-                  - name: thrpt_wrkld_1
-                    weight: 100
-                    queries:
-                        - query: select * from THRPT_G1_range_table_1 where amount BETWEEN 90000 AND 90010
 
-            -   workload: THRPT_G1_2_index_between
-                run:
-                    -   name: thrpt_wrkld_2
-                        weight: 100
-                        queries:
-                            -   query: SELECT * FROM THRPT_G1_range_table_1 WHERE region_id BETWEEN 10 AND 11 and category_id = 20;
-
-            -   workload: THRPT_G1_3_indexonly_between
+            -   workload: THRPT_G3_indexonly_BETWEEN
                 run:
                     -   name: thrpt_wrkld_3
                         weight: 100
                         queries:
                             -   query: SELECT id, amount, quantity, status_code FROM THRPT_G1_range_table_1 WHERE region_id BETWEEN 10 AND 11 and category_id = 20;
-
-            -   workload: THRPT_G1_4_index_IN
-                run:
-                    -   name: thrpt_wrkld_4
-                        weight: 100
-                        queries:
-                            -   query: SELECT * FROM THRPT_G1_range_table_1 WHERE region_id IN (1, 5)  AND category_id = 1;
-
-            -   workload: THRPT_G1_5_indexonly_IN
-                run:
-                    -   name: thrpt_wrkld_5
-                        weight: 100
-                        queries:
-                            -   query: SELECT id, amount, quantity, status_code FROM THRPT_G1_range_table_1 WHERE region_id IN (1, 5) AND category_id = 1;
