--- a/config/yugabyte/regression_pipelines/throughput_read_workload/yb_colocated/THRPT_G8_Groupby_Index_Scan.yaml
+++ b/config/yugabyte/regression_pipelines/throughput_read_workload/yb_colocated/THRPT_G8_Groupby_Index_Scan.yaml
@@ -71,4 +71,7 @@ microbenchmark:
                     -   name: thrpt_wrkld_8
                         weight: 100
                         queries:
-                            -   query: SELECT region_id, category_id, subcategory_id, COUNT(*) FROM THRPT_G1_range_table_1 WHERE region_id = 1 and category_id < 25 GROUP BY region_id, category_id, subcategory_id;
+                            -   query: SELECT region_id, category_id, subcategory_id, COUNT(*) FROM THRPT_G1_range_table_1 WHERE region_id = ? and category_id < 25 GROUP BY region_id, category_id, subcategory_id;
+                                bindings:
+                                   -   util: RandomNumber
+                                       params: [ 1, 100 ]
