--- a/config/yugabyte/regression_pipelines/throughput_read_workload/yugabyte/THRPT_G3_indexonly_scan_between.yaml
+++ b/config/yugabyte/regression_pipelines/throughput_read_workload/yugabyte/THRPT_G3_indexonly_scan_between.yaml
@@ -68,4 +68,13 @@ microbenchmark:
                   - name: thrpt_wrkld_3
                     weight: 100
                     queries:
-                        - query: SELECT id, amount, quantity, status_code FROM THRPT_G1_range_table_1 WHERE region_id BETWEEN 10 AND 11 and category_id = 20;
+                        - query: SELECT id, amount, quantity, status_code FROM THRPT_G1_range_table_1 WHERE region_id BETWEEN ? AND ? and category_id = ?;
+                          bindings:
+                              -   util: RandomNumber
+                                  params: [1, 95]
+                                  referenceName: region1
+                              -   util: ExpressionEval
+                                  params:
+                                      - "region1 + 1"
+                              - util: RandomNumber
+                                params: [1, 50]
