--- a/config/yugabyte/regression_pipelines/throughput_read_workload/yugabyte/THRPT_G5_indexonly_scan_in.yaml
+++ b/config/yugabyte/regression_pipelines/throughput_read_workload/yugabyte/THRPT_G5_indexonly_scan_in.yaml
@@ -63,9 +63,18 @@ microbenchmark:
                     params: [1, 100000]
 
         executeRules:
-            - workload: THRPT_G5_indexonly_IN
-              run:
-                  - name: thrpt_wrkld_5
-                    weight: 100
-                    queries:
-                        - query: SELECT id, amount, quantity, status_code FROM THRPT_G1_range_table_1 WHERE region_id IN (1, 5) AND category_id = 1;
+            -   workload: THRPT_G5_indexonly_IN
+                run:
+                    -   name: thrpt_wrkld_5
+                        weight: 100
+                        queries:
+                            -   query: SELECT id, amount, quantity, status_code FROM THRPT_G1_range_table_1 WHERE region_id IN (?, ?) AND category_id = ?;
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 90 ]
+                                        referenceName: region1
+                                    -   util: ExpressionEval
+                                        params:
+                                            - "region1 + 5"
+                                    -   util: RandomNumber
+                                        params: [ 1, 50 ]
