--- a/config/yugabyte/regression_pipelines/throughput_read_workload/postgres/THRPT_G10_Orderby_DESC_Index_Scan_Limit.yaml
+++ b/config/yugabyte/regression_pipelines/throughput_read_workload/postgres/THRPT_G10_Orderby_DESC_Index_Scan_Limit.yaml
@@ -68,7 +68,7 @@ microbenchmark:
                   - name: thrpt_wrkld_10
                     weight: 100
                     queries:
-                        - query: SELECT region_id, category_id, date_created, id, amount, quantity, status_code FROM THRPT_G1_range_table_1 WHERE status_code IN (?, ?) AND priority_level IN (?, ?) AND region_id <=3 ORDER BY region_id DESC, category_id DESC, date_created DESC, id DESC limit 50;
+                        - query: SELECT region_id, category_id, date_created, id, amount, quantity, status_code FROM THRPT_G1_range_table_1 WHERE status_code IN (?, ?) AND priority_level IN (?, ?) AND region_id IN (1, 40, 70) ORDER BY region_id DESC, category_id DESC, date_created DESC, id DESC limit 50;
                           bindings:
                               -   util: RandomNumber
                                   params: [ 1, 4 ]
