--- a/config/yugabyte/regression_pipelines/perfstudio/yugabyte_range/MG1_analyze_table.yaml
+++ b/config/yugabyte/regression_pipelines/perfstudio/yugabyte_range/MG1_analyze_table.yaml
@@ -333,6 +333,7 @@ microbenchmark:
         executeRules:
 
             - workload: MG1_1_Analyze_50M
+              zeroRowsValidation: false
               time_secs: 1800
               run:
                   - name: analyze_1
@@ -341,6 +342,7 @@ microbenchmark:
                         - query: analyze nets_50M_1
 
             - workload: MG1_2_Analyze_100M
+              zeroRowsValidation: false
               time_secs: 1800
               run:
                   - name: analyze_1
@@ -349,6 +351,7 @@ microbenchmark:
                         - query: analyze nets_100M_1
 
             - workload: MG1_3_Analyze_200M
+              zeroRowsValidation: false
               time_secs: 1800
               run:
                   - name: analyze_1
