--- a/config/yugabyte/regression_pipelines/vector_workloads/postgres/insert_512d_indexed_m16_ef200.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/postgres/insert_512d_indexed_m16_ef200.yaml
@@ -26,7 +26,7 @@ microbenchmark:
         setAutoCommit: false
         create:
             - DROP TABLE IF EXISTS vector_insert_512d_indexed;
-            - CREATE TABLE vector_insert_512d_indexed (id bigint PRIMARY KEY, embedding vector(512), metadata text, category int, created_at timestamp);
+            - CREATE TABLE vector_insert_512d_indexed (id bigint PRIMARY KEY, embedding vector(512));
             - CREATE INDEX ON vector_insert_512d_indexed USING hnsw (embedding vector_l2_ops) WITH (m=16, ef_construction=200);
         cleanup:
             - DROP TABLE IF EXISTS vector_insert_512d_indexed;
@@ -38,16 +38,8 @@ microbenchmark:
                     util: PrimaryIntGen
                     params: [1, 50000]
                   - name: embedding
-                    util: RandomFloatArrayGen
-                    params: [512, -1.0, 1.0]
-                  - name: metadata
-                    util: RandomAString
-                    params: [50, 100]
-                  - name: category
-                    util: RandomNumber
-                    params: [1, 10]
-                  - name: created_at
-                    util: RandomTimestampWithoutTimeZone
+                    util: DeterministicVectorGen
+                    params: [512, -1.0, 1.0, 42]
 
         executeRules:
             - workload: insert_512d_indexed_m16_ef200
@@ -56,15 +48,10 @@ microbenchmark:
                   - name: insert_vector_with_index
                     weight: 100
                     queries:
-                        - query: INSERT INTO vector_insert_512d_indexed (id, embedding, metadata, category, created_at) VALUES (?, ?::vector(512), ?, ?, ?)
+                        - query: INSERT INTO vector_insert_512d_indexed (id, embedding) VALUES (?, ?::vector(512))
                           count: 10
                           bindings:
                               - util: PrimaryIntGen
                                 params: [50001, 500000]
-                              - util: RandomFloatArrayGen
-                                params: [512, -1.0, 1.0]
-                              - util: RandomAString
-                                params: [50, 100]
-                              - util: RandomNumber
-                                params: [1, 10]
-                              - util: RandomTimestampWithoutTimeZone
+                              - util: DeterministicVectorGen
+                                params: [512, -1.0, 1.0, 42]
