--- a/config/yugabyte/regression_pipelines/vector_workloads/postgres/insert_768d_indexed_m16_ef200.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/postgres/insert_768d_indexed_m16_ef200.yaml
@@ -1,10 +1,10 @@
-# Vector Insert - 512D, with HNSW index (m=16, ef_construction=200)
+# Vector Insert - 768D, with HNSW index (m=16, ef_construction=200)
 # Following VectorDBBench naming conventions
-# Configuration: dimension=512, operation=insert, indexed=true, m=16, ef_construction=200
+# Configuration: dimension=768, operation=insert, indexed=true, m=16, ef_construction=200
 
-type: YUGABYTE
-driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+type: POSTGRES
+driver: org.postgresql.Driver
+url: jdbc:postgresql://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: {{username}}
 password: {{password}}
 batchsize: 128
@@ -25,13 +25,13 @@ microbenchmark:
     properties:
         setAutoCommit: false
         create:
-            - DROP TABLE IF EXISTS vector_insert_512d_indexed;
-            - CREATE TABLE vector_insert_512d_indexed (id bigint PRIMARY KEY, embedding vector(512));
-            - CREATE INDEX ON vector_insert_512d_indexed USING ybhnsw (embedding vector_l2_ops) WITH (m=16, ef_construction=200);
+            - DROP TABLE IF EXISTS vector_insert_768d_indexed;
+            - CREATE TABLE vector_insert_768d_indexed (id bigint PRIMARY KEY, embedding vector(768));
+            - CREATE INDEX ON vector_insert_768d_indexed USING hnsw (embedding vector_l2_ops) WITH (m=16, ef_construction=200);
         cleanup:
-            - DROP TABLE IF EXISTS vector_insert_512d_indexed;
+            - DROP TABLE IF EXISTS vector_insert_768d_indexed;
         loadRules:
-            - table: vector_insert_512d_indexed
+            - table: vector_insert_768d_indexed
               rows: 50000
               columns:
                   - name: id
@@ -39,19 +39,19 @@ microbenchmark:
                     params: [1, 50000]
                   - name: embedding
                     util: DeterministicVectorGen
-                    params: [512, -1.0, 1.0, 42]
+                    params: [768, -1.0, 1.0, 42]
 
         executeRules:
-            - workload: insert_512d_indexed_m16_ef200
-              customTags: dim=512,operation=insert,indexed=true,m=16,ef_construction=200
+            - workload: insert_768d_indexed_m16_ef200
+              customTags: dim=768,operation=insert,indexed=true,m=16,ef_construction=200
               run:
                   - name: insert_vector_with_index
                     weight: 100
                     queries:
-                        - query: INSERT INTO vector_insert_512d_indexed (id, embedding) VALUES (?, ?::vector(512))
+                        - query: INSERT INTO vector_insert_768d_indexed (id, embedding) VALUES (?, ?::vector(768))
                           count: 10
                           bindings:
                               - util: PrimaryIntGen
                                 params: [50001, 500000]
                               - util: DeterministicVectorGen
-                                params: [512, -1.0, 1.0, 42]
+                                params: [768, -1.0, 1.0, 42]
